botones para agregar y simplificacion del menu

--- a/registrar-cliente.html
+++ b/registrar-cliente.html
@@ -73,7 +73,8 @@
       <label for="clave">Clave:</label>
       <input type="password" class="form-control" id="clave" name="clave" placeholder="Ingrese clave" required>
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
+    <button type="submit" class="btn btn-primary">Registrar Cliente</button>
+    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
   </form>
 </div>
 <br><br><br>
