--- a/registrar_mascota.html
+++ b/registrar_mascota.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Registrar Cliente</title>
+  <title>Registrar Mascota</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -71,7 +71,7 @@
       <input type="date" class="form-control" id="fecha_de_nac" name="fecha_de_nac">
     </div>
     <button type="submit" class="btn btn-primary">Registrar Mascota</button>
-    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
+    <a href="listar_mascotas_estado.php" class="btn btn-secondary">Volver</a>
   </form>
 </div>
 
