--- a/registrar_personal.html
+++ b/registrar_personal.html
@@ -70,7 +70,7 @@
       </select>
     </div>
     <button type="submit" class="btn btn-primary">Registrar Personal</button>
-    <a href="gestionar-mi-perfil.php" class="btn btn-secondary">Volver</a>
+    <a href="listar_personales.php" class="btn btn-secondary">Volver</a>
   </form>
 </div>
 <br>
