--- a/completar_atencion.html
+++ b/completar_atencion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <title>Mi Perfil</title>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,6 @@
 </nav>
 <br>
 
-
 <div class="container">
   <h2>Completar Atención</h2>
   <hr>
@@ -54,6 +53,7 @@
     <div class="form-group">
       <label for="servicio_id">Servicio:</label>
       <select class="form-control" id="servicio_id" name="servicio_id" required>
+        <option value="" disabled selected>Seleccione un servicio</option>
         <option value="1">Consulta General</option>
         <option value="2">Vacunación</option>
         <option value="3">Desparasitación</option>
