--- a/modificar_personal.html
+++ b/modificar_personal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <title>Modificar Personal</title>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -51,11 +51,11 @@
     </div>
     <div class="form-group">
       <label for="nombre">Nombre:</label>
-      <input type="nombre" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre" required>
+      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre" required>
     </div>
     <div class="form-group">
       <label for="apellido">Apellido:</label>
-      <input type="apellido" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido" required>
+      <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido" required>
     </div>
     <div class="form-group">
       <label for="email">Correo electrónico:</label>
