--- a/pagina.html
+++ b/pagina.html
@@ -12,7 +12,7 @@
   <style type="text/css">
     .carousel-inner img {
       width: 100%;
-      height: 500px; /* Ajusta la altura según sea necesario */
+      height: 500px;
     }
   </style>
 </head>
