--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <title>Quienes Somos?</title>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
       border-radius: 10px;
       text-align: center;
       margin: auto;
-      background-color: #f2f2f2; /* Cambia el color de fondo aquí */
+      background-color: #f2f2f2;
 
     }
 
@@ -31,7 +31,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -91,7 +91,7 @@ cuales prestan servicios a la clínica y están disponibles para consultas a dom
     <!-- Tarjetas para la primera fila -->
     <div class="col-md-4 mb-4">
       <div class="card" style="width: 100%;">
-        <img src="imagenes\vet1.jpg" class="card-img-top" alt="Veterinario">
+        <img src="imagenes/vet1.jpg" class="card-img-top" alt="Veterinario">
         <div class="card-body">
           <h5 class="card-title">Nombre Apellido</h5>
           <p class="card-text">Veterinario</p>
@@ -101,7 +101,7 @@ cuales prestan servicios a la clínica y están disponibles para consultas a dom
 
     <div class="col-md-4 mb-4">
       <div class="card" style="width: 100%;">
-        <img src="imagenes\vet1.jpg" class="card-img-top" alt="Veterinario">
+        <img src="imagenes/vet1.jpg" class="card-img-top" alt="Veterinario">
         <div class="card-body">
           <h5 class="card-title">Nombre Apellido</h5>
           <p class="card-text">Veterinario</p>
@@ -111,7 +111,7 @@ cuales prestan servicios a la clínica y están disponibles para consultas a dom
 
     <div class="col-md-4 mb-4">
       <div class="card" style="width: 100%;">
-        <img src="imagenes\vet1.jpg" class="card-img-top" alt="Veterinario">
+        <img src="imagenes/vet1.jpg" class="card-img-top" alt="Veterinario">
         <div class="card-body">
           <h5 class="card-title">Nombre Apellido</h5>
           <p class="card-text">Veterinario</p>
@@ -122,7 +122,7 @@ cuales prestan servicios a la clínica y están disponibles para consultas a dom
     <!-- Tarjetas para la segunda fila -->
     <div class="col-md-4 mb-4">
       <div class="card" style="width: 100%;">
-        <img src="imagenes\vet1.jpg" class="card-img-top" alt="Veterinario">
+        <img src="imagenes/vet1.jpg" class="card-img-top" alt="Veterinario">
         <div class="card-body">
           <h5 class="card-title">Nombre Apellido</h5>
           <p class="card-text">Peluquero</p>
@@ -132,7 +132,7 @@ cuales prestan servicios a la clínica y están disponibles para consultas a dom
 
     <div class="col-md-4 mb-4">
       <div class="card" style="width: 100%;">
-        <img src="imagenes\vet1.jpg" class="card-img-top" alt="Veterinario">
+        <img src="imagenes/vet1.jpg" class="card-img-top" alt="Veterinario">
         <div class="card-body">
           <h5 class="card-title">Nombre Apellido</h5>
           <p class="card-text">Peluquero</p>
@@ -142,7 +142,7 @@ cuales prestan servicios a la clínica y están disponibles para consultas a dom
 
     <div class="col-md-4 mb-4">
       <div class="card" style="width: 100%;">
-        <img src="imagenes\vet1.jpg" class="card-img-top" alt="Veterinario">
+        <img src="imagenes/vet1.jpg" class="card-img-top" alt="Veterinario">
         <div class="card-body">
           <h5 class="card-title">Nombre Apellido</h5>
           <p class="card-text">Secretaria</p>
@@ -182,9 +182,6 @@ Siempre es mejor usar tratamientos preventivos, pero si ya tenemos el problema, 
 </div>
 </div>
 <br>
-
-
-
 
 <footer class="footer bg-dark text-light">
   <div class="container">
