--- a/registrar-cliente.html
+++ b/registrar-cliente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <title>Registrar Cliente</title>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -59,15 +59,15 @@
     </div>
     <div class="form-group">
       <label for="ciudad">Ciudad:</label>
-      <input type="ciudad" class="form-control" id="ciudad" name="ciudad" placeholder="Ingrese ciudad">
+      <input type="text" class="form-control" id="ciudad" name="ciudad" placeholder="Ingrese ciudad">
     </div>
     <div class="form-group">
       <label for="direccion">Dirección:</label>
-      <input type="direccion" class="form-control" id="direccion" name="direccion" placeholder="Ingrese direccion">
+      <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Ingrese direccion">
     </div>
     <div class="form-group">
       <label for="telefono">Telefono:</label>
-      <input type="telefono" class="form-control" id="telefono" name="telefono" placeholder="Ingrese telefono">
+      <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Ingrese telefono">
     </div>
     <div class="form-group">
       <label for="clave">Clave:</label>
@@ -78,9 +78,6 @@
   </form>
 </div>
 <br><br><br>
-
-
-
 
 <footer class="footer bg-dark text-light">
   <div class="container">
@@ -108,7 +105,6 @@
     </div>
   </div>
 </footer>
-
 
 </body>
 </html>
