--- a/registrar_personal.html
+++ b/registrar_personal.html
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -47,11 +47,11 @@
   <form action="registrar_personal.php" method="post">
     <div class="form-group">
       <label for="nombre">Nombre:</label>
-      <input type="nombre" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre" required>
+      <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre" required>
     </div>
     <div class="form-group">
       <label for="apellido">Apellido:</label>
-      <input type="apellido" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido" required>
+      <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido" required>
     </div>
     <div class="form-group">
       <label for="email">Correo electrónico:</label>
@@ -64,6 +64,7 @@
     <div class="form-group">
       <label for="rol_id">Rol:</label>
       <select class="form-control" id="rol_id" name="rol_id" required>
+        <option value="" disabled selected>Seleccione un rol</option>
         <option value="1">Administrador</option>
         <option value="2">Peluquero</option>
         <option value="3">Veterinario</option>
@@ -101,7 +102,6 @@
     </div>
   </div>
 </footer>
-
 
 </body>
 </html>
