--- a/servicios.html
+++ b/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <title>Servicios</title>
   <meta charset="utf-8">
@@ -13,9 +13,6 @@
     .carousel-inner img {
       width: 100%;
       height: 500px;
-      /*object-fit: cover;*/
-      /*border-radius: 10px; /* Bordes redondeados */
-      /*border: 6px solid #ccc; /* Color del borde del carrusel */
     }
     body {
       display: flex;
@@ -45,7 +42,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg bg-dark">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes\logovet.png" alt="Logo" width="50" height="50"></a>
+  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
