--- a/completar_atencion.html
+++ b/completar_atencion.html
@@ -11,35 +11,38 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html"><img src="imagenes/logovet.png" alt="Logo" width="50" height="50"></a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto" >
-      <li class="nav-item">
-        <a class="nav-link" href="quienes-somos.html">Quienes somos?</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contacto.html">Contacto</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="servicios.html">Servicios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="gestionar-mi-perfil.php">Mi Perfil</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Iniciar Sesión</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <a class="navbar-brand" href="pagina.html">
+      <img src="imagenes/logovet.png" alt="Logo" width="50" height="50">
+        Veterinaria San Anton
+    </a>
+  
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="quienes-somos.html">Quienes somos?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="servicios.html">Servicios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="gestionar-mi-perfil.php">Mi Perfil</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Iniciar Sesión</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 <br>
 
 <div class="container">
@@ -91,18 +94,20 @@
         <br>
         <h5>Mapa de Sitio</h5>
         <ul class="list-unstyled">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Quienes somos?</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="pagina.html">Inicio</a></li>
+          <li><a href="quienes-somos.html">Quienes somos?</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
         </ul>
       </div>
       <div class="col-md-6">
         <br>
         <h5>Contacto</h5>
         <address>
+          Veterinaria San Anton<br>
           123 Calle Principal<br>
-          Ciudad, País<br>
+          Rosario, Argentina<br>
           Teléfono: 123-456-7890<br>
           Correo electrónico: info@example.com
         </address>
