--- a/consultar_carnet.html
+++ b/consultar_carnet.html
@@ -50,7 +50,7 @@
   <h2>Consultar Carnet de Mascota</h2><hr>
   <form action="generar_carnet.php" method="post">
     <div class="form-group">
-      <label for="nombre_mascota">Nombre de la Mascota:</label>
+      <label for="nombre_mascota">Nombre de la Mascota:<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="nombre_mascota" name="nombre_mascota" placeholder="Nombre de la mascota" required>
     </div>
     <button type="submit" class="btn btn-primary">Generar Carnet</button>
