--- a/completar_atencion.html
+++ b/completar_atencion.html
@@ -50,11 +50,11 @@
   <hr>
   <form action="procesar_atencion.php" method="post">
     <div class="form-group">
-      <label for="nombre_mascota">Mascota:</label>
+      <label for="nombre_mascota">Mascota:<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="nombre_mascota" name="nombre_mascota" placeholder="Nombre de la mascota" required>
     </div>
     <div class="form-group">
-      <label for="servicio_id">Servicio:</label>
+      <label for="servicio_id">Servicio:<span class="text-danger">*</span></label>
       <select class="form-control" id="servicio_id" name="servicio_id" required>
         <option value="" disabled selected>Seleccione un servicio</option>
         <option value="1">Consulta General</option>
@@ -69,12 +69,12 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="fecha_hora">Fecha y Hora:</label>
+      <label for="fecha_hora">Fecha y Hora:<span class="text-danger">*</span></label>
       <input type="datetime-local" class="form-control" id="fecha_hora" name="fecha_hora" required>
     </div>
     <div class="form-group">
       <label for="titulo">Título:</label>
-      <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Ingrese el título" required>
+      <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Ingrese el título">
     </div>
     <div class="form-group">
       <label for="descripcion">Descripción:</label>
