--- a/generar_turno.html
+++ b/generar_turno.html
@@ -51,11 +51,11 @@
 
         <form action="procesar_turno.php" method="post">
             <div class="form-group">
-                <label for="fecha_hora">Fecha y Hora:</label>
+                <label for="fecha_hora">Fecha y Hora:<span class="text-danger">*</span></label>
                 <input type="datetime-local" class="form-control" id="fecha_hora" name="fecha_hora" required>
             </div>
             <div class="form-group">
-              <label for="servicio_id">Servicio:</label>
+              <label for="servicio_id">Servicio:<span class="text-danger">*</span></label>
               <select class="form-control" id="servicio_id" name="servicio_id" required>
                 <option value="" disabled selected>Seleccione un servicio</option>
                 <option value="1">Consulta General</option>
@@ -70,7 +70,7 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="personal_id">Personal ID:</label>
+              <label for="personal_id">Personal ID:<span class="text-danger">*</span></label>
               <input type="text" class="form-control" id="personal_id" name="personal_id" required>
             </div>
             <button type="submit" class="btn btn-primary">Generar Turno</button>
