--- a/registrar_mascota.html
+++ b/registrar_mascota.html
@@ -50,15 +50,15 @@
   <hr>
   <form action="procesar_registro_mascota.php" method="post" enctype="multipart/form-data">
     <div class="form-group">
-      <label for="cliente_id">Cliente ID:</label>
+      <label for="cliente_id">Cliente ID:<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="cliente_id" name="cliente_id" placeholder="Ingrese ID del cliente" required>
     </div>
     <div class="form-group">
-      <label for="nombre">Nombre de la Mascota:</label>
+      <label for="nombre">Nombre de la Mascota:<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre de la mascota" required>
     </div>
     <div class="form-group">
-      <label for="foto">Foto:</label>
+      <label for="foto">Foto:<span class="text-danger">*</span></label>
       <input type="file" class="form-control" id="foto" name="foto" required>
     </div>
     <div class="form-group">
