--- a/registrar_personal.html
+++ b/registrar_personal.html
@@ -49,23 +49,23 @@
   <h2>Registrar Personal</h2>
   <form action="registrar_personal.php" method="post">
     <div class="form-group">
-      <label for="nombre">Nombre:</label>
+      <label for="nombre">Nombre:<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese nombre" required>
     </div>
     <div class="form-group">
-      <label for="apellido">Apellido:</label>
+      <label for="apellido">Apellido:<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Ingrese apellido" required>
     </div>
     <div class="form-group">
-      <label for="email">Correo electrónico:</label>
+      <label for="email">Correo electrónico:<span class="text-danger">*</span></label>
       <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese correo electrónico" required>
     </div>
     <div class="form-group">
-      <label for="clave">Clave:</label>
+      <label for="clave">Clave:<span class="text-danger">*</span></label>
       <input type="password" class="form-control" id="clave" name="clave" placeholder="Ingrese clave" required>
     </div>
     <div class="form-group">
-      <label for="rol_id">Rol:</label>
+      <label for="rol_id">Rol:<span class="text-danger">*</span></label>
       <select class="form-control" id="rol_id" name="rol_id" required>
         <option value="" disabled selected>Seleccione un rol</option>
         <option value="1">Administrador</option>
