Agrego Cerrar Sesion en todos los headers

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html">
+  <a class="navbar-brand" href="pagina.php">
     <img src="imagenes/logovet.png" alt="Logo" width="50" height="50">
       Veterinaria San Anton
   </a>
@@ -24,13 +24,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="quienes-somos.html">Quienes somos?</a>
+        <a class="nav-link" href="quienes-somos.php">Quienes somos?</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacto.html">Contacto</a>
+        <a class="nav-link" href="contacto.php">Contacto</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="servicios.html">Servicios</a>
+        <a class="nav-link" href="servicios.php">Servicios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gestionar-mi-perfil.php">Mi Perfil</a>
@@ -73,10 +73,10 @@
         <br>
         <h5>Mapa de Sitio</h5>
         <ul class="list-unstyled">
-          <li><a href="pagina.html">Inicio</a></li>
-          <li><a href="quienes-somos.html">Quienes somos?</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="pagina.php">Inicio</a></li>
+          <li><a href="quienes-somos.php">Quienes somos?</a></li>
+          <li><a href="servicios.php">Servicios</a></li>
+          <li><a href="contacto.php">Contacto</a></li>
           <li><a href="login.html">Iniciar Sesión</a></li>
         </ul>
       </div>
