--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.html">
+  <a class="navbar-brand" href="pagina.php">
     <img src="imagenes/logovet.png" alt="Logo" width="50" height="50">
       Veterinaria San Anton
   </a>
@@ -24,13 +24,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="quienes-somos.html">Quienes somos?</a>
+        <a class="nav-link" href="quienes-somos.php">Quienes somos?</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacto.html">Contacto</a>
+        <a class="nav-link" href="contacto.php">Contacto</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="servicios.html">Servicios</a>
+        <a class="nav-link" href="servicios.php">Servicios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gestionar-mi-perfil.php">Mi Perfil</a>
@@ -38,7 +38,10 @@
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+          <p class="nav-link" style="color: #007bff;margin: 0; padding: 0.5rem 1rem; text-decoration: none;"><?php echo $_SESSION['nombre']; ?></p>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="logout.php">Cerrar sesión</a>
       </li>
     </ul>
   </div>
@@ -49,14 +52,14 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <a href="registrar-cliente.html" class="list-group-item list-group-item-action active">Registrar Cliente</a>
-          <!--<a href="registrar_personal.html" class="list-group-item list-group-item-action">Registrar Personal</a>-->
+          <a href="ingresar_cliente.php" class="list-group-item list-group-item-action active">Registrar Cliente</a>
+          <!--<a href="ingresar_personal.php" class="list-group-item list-group-item-action">Registrar Personal</a>-->
           <a href="listar_personales.php" class="list-group-item list-group-item-action">Gestionar Personales</a>
-          <!--<a href="registrar_mascota.html" class="list-group-item list-group-item-action">Registrar Mascota</a>-->
+          <!--<a href="registrar_mascota.php" class="list-group-item list-group-item-action">Registrar Mascota</a>-->
           <a href="listar_mascotas_estado.php" class="list-group-item list-group-item-action">Gestionar Mascotas</a>
-          <a href="completar_atencion.html" class="list-group-item list-group-item-action">Registrar Atención</a>
-          <a href="consultar_carnet.html" class="list-group-item list-group-item-action">Gestionar Atenciones</a>
-          <a href="generar_turno.html" class="list-group-item list-group-item-action">Generar Turnos</a>
+          <a href="" class="list-group-item list-group-item-action">Registrar Atención</a>
+          <a href="consultar_carnet.php" class="list-group-item list-group-item-action">Gestionar Atenciones</a>
+          <a href="generar_turno.php" class="list-group-item list-group-item-action">Generar Turnos</a>
           <!--<a href="buscar_cliente.html" class="list-group-item list-group-item-action">Listar Mascotas por Cliente</a>-->
         </div>
       </div>
@@ -77,10 +80,10 @@
         <br>
         <h5>Mapa de Sitio</h5>
         <ul class="list-unstyled">
-          <li><a href="pagina.html">Inicio</a></li>
-          <li><a href="quienes-somos.html">Quienes somos?</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="pagina.php">Inicio</a></li>
+          <li><a href="quienes-somos.php">Quienes somos?</a></li>
+          <li><a href="servicios.php">Servicios</a></li>
+          <li><a href="contacto.php">Contacto</a></li>
           <li><a href="login.html">Iniciar Sesión</a></li>
         </ul>
       </div>
