--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
           <label for="password">Contraseña:</label>
           <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Iniciar Sesión</button>
+        <button type="submit" class="btn btn-primary btn-block" title="Iniciar Sesión">Iniciar Sesión</button>
       </form>
     </div>
   </div>
