--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+        <a class="nav-link" href="login.html">Iniciar sesión</a>
       </li>
     </ul>
   </div>
