Agrego title a los headers y footers

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg  bg-dark ">
-  <a class="navbar-brand" href="pagina.php">
+  <a class="navbar-brand" href="pagina.php" title="Página principal">
     <img src="imagenes/logovet.png" alt="Logo" title="Logo" width="50" height="50">
       Veterinaria San Anton
   </a>
@@ -25,21 +25,21 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="quienes-somos.php">Quienes somos?</a>
+        <a class="nav-link" href="quienes-somos.php" title="Información de la Veterinaria">Quienes somos?</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacto.php">Contacto</a>
+        <a class="nav-link" href="contacto.php" title="Formulario de consultas">Contacto</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="servicios.php">Servicios</a>
+        <a class="nav-link" href="servicios.php" title="Nuestros servicios">Servicios</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="gestionar-mi-perfil.php">Mi Perfil</a>
+        <a class="nav-link" href="gestionar-mi-perfil.php" title="Acciones de usuario">Mi Perfil</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Iniciar sesión</a>
+        <a class="nav-link" href="login.html" title="Iniciar sesión">Iniciar sesión</a>
       </li>
     </ul>
   </div>
@@ -74,11 +74,11 @@
         <br>
         <h5>Mapa de Sitio</h5>
         <ul class="list-unstyled">
-          <li><a href="pagina.php">Inicio</a></li>
-          <li><a href="quienes-somos.php">Quienes somos?</a></li>
-          <li><a href="servicios.php">Servicios</a></li>
-          <li><a href="contacto.php">Contacto</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
+          <li><a href="pagina.php" title="Página principal">Inicio</a></li>
+          <li><a href="quienes-somos.php" title="Información de la Veterinaria">Quienes somos?</a></li>
+          <li><a href="servicios.php" title="Nuestros servicios">Servicios</a></li>
+          <li><a href="contacto.php" title="Formulario de consultas">Contacto</a></li>
+          <li><a href="login.html" title="Iniciar sesión">Iniciar Sesión</a></li>
         </ul>
       </div>
       <div class="col-md-6">
